working on user join component and join service

--- a/src/assets/i18n/de-DE.json
+++ b/src/assets/i18n/de-DE.json
@@ -255,6 +255,271 @@
 	"ON": "Ein",
 	"OFF": "Aus",
 	"DISABLED": "Deaktiviert",
+	"MEETING": {
+		"TAB_NAME_MEET_NOW": "Besprechung jetzt starten",
+		"IN_PROGRESS": "Läuft",
+		"JOIN": "Teilnehmen",
+		"YOU": "Sie",
+		"AND": "und",
+		"OTHERS": "andere",
+		"TITLE": "Eine Besprechung planen",
+		"TITLE_UPDATE": "Kommende Besprechung bearbeiten",
+		"SUBJECT": "Thema:",
+		"SUBJECT_PLACEHOLDER": "Thema eingeben",
+		"DEFAULT_MEETING_SUBJECT": "Besprechung {{number}}",
+		"POINT_TO_POINT_MEETING_SUBJECT": "Neue Besprechung",
+		"TO": "An: ",
+		"PARTICIPANTS_COUNT": " Teilnehmer von ",
+		"TO_PANELIST": "An Diskussionsteilnehmer:",
+		"TO_PANELIST_WITH_NUMBER": "An Diskussionsteilnehmernr. {{number}}:",
+		"TO_PLACEHOLDER": "Namen oder E-Mail eingeben",
+		"TO_PARTICIPANTS": "An Teilnehmer:",
+		"PANELIST_NUMBER": "Diskussionsteilnehmernummer",
+		"START_TIME": "Startzeit:",
+		"END_DATE": "Ende:",
+		"DURATION": "Dauer:",
+		"LOCATION": "Ort:",
+		"MESSAGE": "Nachricht",
+		"MESSAGE_PLACEHOLDER": "Details zu dieser Besprechung eingeben...",
+		"ENDPOINTS": "Endgeräte",
+		"SEARCH_ENDPOINTS": "Endgeräte suchen",
+		"SELECT_ENDPOINTS": "Endgeräte auswählen",
+		"BROADCAST": {
+			"ADD_AN_IMAGE": "Fügen Sie ein Bild hinzu, damit diese Rundsendung einfacher gefunden wird",
+			"BROADCAST": "Rundsenden",
+			"BROADCAST_THIS_MEETING": "Diese Besprechung rundsenden (Live-Stream)",
+			"EMAIL_INVITE": "E-Mail-Einladung",
+			"COPY_LINK": "Link kopieren",
+			"CANCEL": "Abbrechen",
+			"OPTIONAL": "Optional",
+			"REQUIRED": "Erforderlich",
+			"DESCRIPTION": "Geben Sie eine Beschreibung für die Rundsendung ein",
+			"RECORDING_PROFILE": "Aufzeichnungs- und Rundsendungsprofil:",
+			"DEFAULT": "Standard",
+			"SELECT_PROFILE": "Profil auswählen",
+			"BROADCAST_PIN": "Rundsendungs-PIN:",
+			"SAME_AS_MEETING_PIN": "Wie Besprechungs-PIN",
+			"BROADCAST_ACCESS": "Zugriff auf Rundsendung zulässig für:",
+			"BROADCAST_ACCESS_LIST": {
+				"ALL_USERS": "Alle Benutzer (öffentlich)",
+				"ALL_AUTHENTICATED": "Alle authentifizierten Benutzer",
+				"SPECIFIC_USERS": "Bestimmte Benutzer:",
+				"PRIVATE": "Privat"
+			},
+			"SHOW_PUBLIC": "Rundsendung in der Liste der öffentlichen Ereignisse anzeigen",
+			"AUTO_RECORD": "Rundsendung automatisch aufzeichnen",
+			"ENABLE_Q_A": "F&A-Chat mit Zuschauern aktivieren",
+			"MODERATOR_PIN": "Moderator-PIN für F&A:",
+			"Q_A_TOOLTIP": "Geben Sie eine PIN ein, um zusätzliche Moderatoren für den F&A-Chat zuzulassen",
+			"BROADCAST_UNAVAILABLE": "Bei wiederkehrenden Besprechungen werden Rundsendungen nicht unterstützt."
+		},
+		"ADVANCED": "Erweitert",
+		"BROWSER_AUDIO_VIDEO": "Audio/Video + Präsentation",
+		"PRESENTATION_ONLY": "Nur Präsentation",
+		"CALL_ME": "Mich anrufen",
+		"VIDEO_THUMBNAIL": "Video-Miniaturbild",
+		"OPEN_RECURRING_MEETING": "Öffnen",
+		"OCCURRENCE": "Diese Instanz",
+		"SERIES": "Alle Instanzen",
+		"TIME": {
+			"MONTHS": "Mo",
+			"YEARS": "J",
+			"DAYS": "T",
+			"HOURS": "h",
+			"MINUTES": "Minuten",
+			"SECONDS": "s"
+		},
+		"DURATIONS": {
+			"15M": "15 Minuten",
+			"30M": "30 Minuten",
+			"1H": "1 Stunde",
+			"2H": "2 Stunden",
+			"3H": "3 Stunden",
+			"6H": "6 Stunden"
+		},
+		"SEND": "Absenden",
+		"SAVE": "Speichern",
+		"INCORRECT_INPUT": "Falsche Eingabe",
+		"TIME_IN_THE_PAST_WARN": "Die Startzeit darf nicht in der Vergangenheit liegen.",
+		"SYNCHRONIZED_FROM_OUTLOOK": "(Synchronisiert von Microsoft Outlook, schreibgeschützt)",
+		"DELETE": "Löschen",
+		"DELETE_CONFIRM_TEXT": "Soll der Löschvorgang wirklich durchgeführt werden?",
+		"CANCEL": "Abbrechen",
+		"CLOSE": "Schließen",
+		"OK": "OK",
+		"EMAIL": "E-Mail-Adresse: ",
+		"PHONE": "Telefon: ",
+		"TERMINAL_CONFLICT": "Mindestens ein ausgewählter Endpunkt ist zu diesem Zeitpunkt besetzt.",
+		"PIN_REQUEST": {
+			"TITLE_PIN_ASSIGN": "Geben Sie die einmalige PIN für diese Besprechung an. Nur Ziffern sind zulässig.",
+			"ENTER_PIN": "PIN eingeben"
+		},
+		"ERROR": {
+			"NOT_VALID_TIME": "Falsche Zeitangabe oder falsches Zeitformat. Verwenden Sie folgendes Format: „X:XX AM“ oder „XX:XX AM“",
+			"CAPTION": "Es ist ein Fehler aufgetreten.",
+			"VALIDATION_CAPTION": "Feldüberprüfung fehlgeschlagen",
+			"THESE_FIELDS_DIDNT_PASS_VALID": "Die folgenden Felder konnten nicht validiert werden:",
+			"UNKNOWN_VALIDATION_ERROR": "Unbekannter Überprüfungsfehler. Wenden Sie sich an den Serveradministrator.",
+			"VIRTUAL_CONFERENCE_ID_CONFLICTED": "Es besteht ein Konflikt mit der Kennung für die virtuelle Konferenz. Wählen Sie einen anderen virtuellen Raum oder ändern Sie den Besprechungstermin.",
+			"SERVICE_UNAVAILABLE": "Keine Antwort vom Server oder Serverfehler. Versuchen Sie es später erneut.",
+			"SERVICE_INTERNAL_ERROR": "Interner Serverfehler oder Fehlkonfiguration. Ihre Anfrage konnte nicht verarbeitet werden. Wenden Sie sich an den Serveradministrator.",
+			"MISSING_REQUEST_PARAM": "Erforderliche Eingabe fehlt. Wenden Sie sich an den Administrator.",
+			"VIRTUAL_ROOM_REQUIRED": "Beim Planen einer Besprechung darf nur ein virtueller Raum ausgewählt werden.",
+			"ERROR_INVALID_P2P_INFO": "Die Punkt-zu-Punkt-Besprechung wurde nicht geplant, weil mindestens eine der folgenden Voraussetzungen nicht erfüllt wurden:\n1. Dieser Anruf hat 2 Endpunkte.\n2. Keiner der Endpunkte ist ein SIP-Endpunkt.",
+			"USER_ID_REQUEST_ERROR": "Keine Antwort vom Server für Benutzer-ID-Anfrage. Warten Sie einen Moment und versuchen Sie es erneut oder wenden Sie sich an den Serveradministrator.",
+			"NON_SCOPIA_USER": "Sie können keine Nicht-Scopia-Benutzer hinzufügen",
+			"ACCESS_DENIED": "Zugriff verweigert.",
+			"TOKEN_EXPIRED": "Authentifizierungstoken abgelaufen.",
+			"TOKEN_INVALID": "Ungültiges Authentifizierungstoken.",
+			"ERROR": "Ein unerwarteter Fehler ist aufgetreten. Wenden Sie sich an den Serveradministrator.",
+			"MCU_RESOURCE_SHORTAGE": "Die Besprechung kann nicht geplant werden (Avaya Meetings Media Server-Kapazität ausgeschöpft).\nÜberprüfen Sie die Einstellungen der Besprechung und versuchen Sie es erneut.",
+			"ERC_WAITING_ROOM_REQUIRED_IN_TE": "In TE-Umgebungen ist ein Warteraum erforderlich. Überprüfen Sie die Besprechungseinstellungen.",
+			"ERROR_DAYOFWEEKS_REQUIRED": "Sie müssen die gewünschten Tage für die wiederkehrende Besprechung angeben."
+		},
+		"RECURRING": {
+			"TITLE": "Wiederkehrende Besprechung",
+			"RECURRING": "Wiederkehrend:",
+			"REPEATS": "Wiederholung",
+			"DAILY": "Täglich",
+			"WEEKLY": "Wöchentlich",
+			"MONTHLY": "Monatlich",
+			"YEARLY": "Jährlich",
+			"EVERY": "Alle",
+			"EVERY_FEMALE": "Alle",
+			"DAYS": "Tag(e)",
+			"WEEKS": "Woche(n)",
+			"MONTHS": "Monat(e)",
+			"YEARS": "Jahr(e)",
+			"ON": "Am",
+			"QUICK_OPTIONS": {
+				"ONCE": "Einmalige Besprechung",
+				"DAY_NUMBER_OF_MONTH": "Am {{dayOfMonth}}. eines jeden Monats",
+				"EVERY_DAY": "Jeden Tag",
+				"EVERY_SUNDAY": "Jeden Sonntag",
+				"EVERY_MONDAY": "Jeden Montag",
+				"EVERY_TUESDAY": "Jeden Dienstag",
+				"EVERY_WEDNESDAY": "Jeden Mittwoch",
+				"EVERY_THURSDAY": "Jeden Donnerstag",
+				"EVERY_FRIDAY": "Jeden Freitag",
+				"EVERY_SATURDAY": "Jeden Samstag"
+			},
+			"CUSTOM": "Benutzerdefiniert",
+			"DESCRIPTION_LINES": {
+				"DAILY": "Alle {{numberOfRepeats}} Tage ab {{meetingDateString}} bis {{meetingTimeString}} von {{meetingEndTimeString}}.",
+				"DAILY_WITH_ENDDATE": "Alle {{numberOfRepeats}} Tage ab {{meetingDateString}} bis {{meetingEndDateString}} von {{meetingTimeString}} bis {{meetingEndTimeString}}.",
+				"WEEKLY": "Alle {{numberOfRepeats}} Wochen am {{weeklyDaysString}} ab {{meetingDateString}} von {{meetingTimeString}} bis {{meetingEndTimeString}}.",
+				"WEEKLY_WITH_ENDDATE": "Alle {{numberOfRepeats}} Wochen am {{weeklyDaysString}} ab {{meetingDateString}} bis {{meetingEndDateString}} von {{meetingTimeString}} bis {{meetingEndTimeString}}.",
+				"MONTHLY": "Jeden {{selectedMonthDay}}. alle {{numberOfRepeats}} Monat(e) ab {{meetingDateString}} von {{meetingTimeString}} bis {{meetingEndTimeString}}.",
+				"MONTHLY_WITH_ENDDATE": "Jeden {{selectedMonthDay}}. alle {{numberOfRepeats}} Monat(e) vom {{meetingDateString}} bis {{meetingEndDateString}} von {{meetingTimeString}} bis {{meetingEndTimeString}}.",
+				"YEARLY_ENDDATE": "gültig {{meetingDateString}} von {{meetingTimeString}} bis {{meetingEndTimeString}}.",
+				"OCCURS": "Intervall",
+				"OF_EVERY_YEAR": "jedes Jahr",
+				"YEARLY_ON_EVERY": "",
+				"JANUARY": "Januar",
+				"FEBRUARY": "Februar",
+				"MARCH": "März",
+				"APRIL": "April",
+				"MAY": "Mai",
+				"JUNE": "Juni",
+				"JULY": "Juli",
+				"AUGUST": "August",
+				"SEPTEMBER": "September",
+				"OCTOBER": "Oktober",
+				"NOVEMBER": "November",
+				"DECEMBER": "Dezember",
+				"MONDAY": "Montag",
+				"TUESDAY": "Dienstag",
+				"WEDNESDAY": "Mittwoch",
+				"THURSDAY": "Donnerstag",
+				"FRIDAY": "Freitag",
+				"SATURDAY": "Samstag",
+				"SUNDAY": "Sonntag",
+				"WEEKDAY": "Wochentag",
+				"WEEKENDDAY": "Wochenendtag",
+				"ANYDAY": "Tag",
+				"FIRST": "ersten",
+				"SECOND": "Sekunde",
+				"THIRD": "dritten",
+				"FOURTH": "vierten",
+				"LAST": "letzten",
+				"OF": "von"
+			}
+		},
+		"SELECT_LOCATION": {
+			"TITLE": "Ort",
+			"VIRTUAL_ROOM": "Virtueller Raum",
+			"NEW_MEETING": "Neue Besprechung",
+			"MEETING_ID": "Besprechungs-ID:",
+			"MEETING_TYPE": "Besprechungsart:",
+			"SEARCH": "Suchen",
+			"SEARCH_ROOM": "Raum suchen",
+			"FOUND_ROOMS": "Gefundene Räume",
+			"YOUR_ROOMS": "Ihre Räume",
+			"DELEGATED_ROOMS": "Delegierte Räume",
+			"SELECT_VIRTUAL_ROOM": "Wählen Sie einen virtuellen Raum für das Meeting aus.",
+			"ERROR": {
+				"MEETING_ID_MUST_START": "Darf nur Zahlen enthalten und muss ab {{number}} beginnen",
+				"MEETING_ID_MINIMAL_LENGTH": "Die Mindestlänge beträgt {{n}}",
+				"MEETING_ID_REQUIRED": "Besprechungs-ID ist erforderlich"
+			}
+		},
+		"ADVANCED_OPTIONS": {
+			"TITLE": "Besprechungseinstellung",
+			"MEETING_PIN": "Besprechungs-PIN:",
+			"MEETING_HOST": "Besprechungshost:",
+			"MODERATOR_PIN": "Moderator-PIN:",
+			"PLACE_PARTICIPANTS": "Teilnehmer in „Wartezimmer“ leiten, bis der Moderator die Besprechung betritt",
+			"RECORD_MEETING": "Diese Besprechung aufzeichnen",
+			"TERMINATE_TIME": "Zu geplanter Zeit beenden und im Voraus warnen (Min.): ",
+			"TERMINATE_LEFT": "Beenden, wenn alle Teilnehmer die Besprechung verlassen haben (Min.):",
+			"RESERVED_PORTS": "Reservierte Ports",
+			"FULL": "Full-HD:",
+			"HIGH": "Hohe Auflösung:",
+			"STANDARD": "Standardauflösung:",
+			"AUDIO_ONLY_WITH_WC": "Audio und Web:",
+			"ENDPOINTS_OPTIONS": "Endgerät-Optionen",
+			"PARTICIPANTS": "Teilnehmer",
+			"AUTO_DIAL": "Auto-Wählen",
+			"ON_MASTER": "Auf Master-MCU",
+			"NONE": "–",
+			"OPTIONAL": "Optional",
+			"REQUIRED": "Erforderlich",
+			"SELECT": "Auswählen",
+			"SELECT_FOR": "Endgerät für {{user}} auswählen",
+			"SELECTED_FOR": "{{endpoint}} wurde für {{user}} ausgewählt",
+			"SPECIAL_EVENT": "Ereigniskonferenz",
+			"VIDEO_LAYOUT": "Video-Layout",
+			"VIDEO_LAYOUT_OPTIONS": {
+				"PARTICIPANTS": "Teilnehmer",
+				"MEETING_LAYOUT": "Besprechungs-Layout",
+				"DYNAMIC": "Dynamisch",
+				"CLEAR_SELECTED": "Auswahl aufheben"
+			},
+			"LINK_FOR_PARTICIPANTS": "Link für Teilnehmer",
+			"LINK_FOR_MODERATORS": "Link für Moderatoren"
+		},
+		"SELECT_ENDPOINT": {
+			"SELECT_AN_ENDPOINT": "Endgerät auswählen",
+			"BY_DIRECTORY": "Nach Verzeichnis",
+			"BY_ADDRESS": "Nach Adresse",
+			"NAME": "Name:",
+			"PROTOCOL": "Protokoll:",
+			"RESTRICTED_MODE": "Eingeschränkter Modus",
+			"3G": "3G",
+			"ADDRESS": "Adresse:",
+			"BANDWIDTH": "Bandbreite:",
+			"SEARCH_ENDPOINT": "Endgeräte suchen",
+			"BANDWIDTH_DEFAULT": "Standard",
+			"BANDWIDTH_AUDIO": "Audio",
+			"BANDWIDTH_AUDIO_56": "56 Audio",
+			"BANDWIDTH_VIDEO_56": "56 Audio",
+			"NONE": "–",
+			"ERROR": {
+				"ENDPOINT_INVITED": "Dieses Endgerät wurde eingeladen."
+			},
+			"MOBILE": "Mobil"
+		}
+	},
 	"GENERAL": {
 		"ERROR": {
 			"SESSION_HAS_EXPIRED": "Ihre Sitzung ist abgelaufen. Melden Sie sich erneut an, um fortzufahren.",
