--- a/src/assets/i18n/ja-JP.json
+++ b/src/assets/i18n/ja-JP.json
@@ -255,6 +255,271 @@
 	"ON": "オン",
 	"OFF": "オフ",
 	"DISABLED": "無効",
+	"MEETING": {
+		"TAB_NAME_MEET_NOW": "会議に参加",
+		"IN_PROGRESS": "進行中",
+		"JOIN": "参加",
+		"YOU": "自分",
+		"AND": "および",
+		"OTHERS": "その他",
+		"TITLE": "会議のスケジュール予約",
+		"TITLE_UPDATE": "会議の編集",
+		"SUBJECT": "件名：",
+		"SUBJECT_PLACEHOLDER": "件名を入力",
+		"DEFAULT_MEETING_SUBJECT": "会議 {{number}}",
+		"POINT_TO_POINT_MEETING_SUBJECT": "新規会議",
+		"TO": "送信先：",
+		"PARTICIPANTS_COUNT": " 名、全参加者数 ",
+		"TO_PANELIST": "送信先パネリスト：",
+		"TO_PANELIST_WITH_NUMBER": "送信先パネリスト番号 {{number}}：",
+		"TO_PLACEHOLDER": "名前または電子メールを入力",
+		"TO_PARTICIPANTS": "招待参加者：",
+		"PANELIST_NUMBER": "パネリスト番号：",
+		"START_TIME": "開始日時：",
+		"END_DATE": "終了日時",
+		"DURATION": "期間：",
+		"LOCATION": "場所：",
+		"MESSAGE": "メッセージ",
+		"MESSAGE_PLACEHOLDER": "会議の詳細を入力...",
+		"ENDPOINTS": "エンドポイント",
+		"SEARCH_ENDPOINTS": "エンドポイントを検索",
+		"SELECT_ENDPOINTS": "エンドポイントを選択",
+		"BROADCAST": {
+			"ADD_AN_IMAGE": "このブロードキャストを特定し易くするための画像を追加する",
+			"BROADCAST": "ブロードキャスト",
+			"BROADCAST_THIS_MEETING": "この会議をブロードキャストする（ライブストリーミング）",
+			"EMAIL_INVITE": "電子メール招待",
+			"COPY_LINK": "リンクをコピー",
+			"CANCEL": "キャンセル",
+			"OPTIONAL": "オプション",
+			"REQUIRED": "必須",
+			"DESCRIPTION": "ブロードキャストの説明を入力",
+			"RECORDING_PROFILE": "会議記録およびブロードキャストプロファイル：",
+			"DEFAULT": "既定",
+			"SELECT_PROFILE": "プロファイルの選択",
+			"BROADCAST_PIN": "ブロードキャスト PIN：",
+			"SAME_AS_MEETING_PIN": "会議 PIN と同じ PIN を使用する",
+			"BROADCAST_ACCESS": "ブロードキャストへのアクセスを許可する：",
+			"BROADCAST_ACCESS_LIST": {
+				"ALL_USERS": "すべてのユーザー（公開）",
+				"ALL_AUTHENTICATED": "認証されたすべてのユーザー",
+				"SPECIFIC_USERS": "特定のユーザー：",
+				"PRIVATE": "親展"
+			},
+			"SHOW_PUBLIC": "公開イベントのリストにブロードキャストを表示する",
+			"AUTO_RECORD": "ブロードキャストを自動的に記録する",
+			"ENABLE_Q_A": "視聴者との Q&A チャットを有効にする",
+			"MODERATOR_PIN": "Q&A モデレーター PIN：",
+			"Q_A_TOOLTIP": "PIN を入力して Q＆A チャットに追加のモデレーターを許可します",
+			"BROADCAST_UNAVAILABLE": "定期会議ではブロードキャストはサポートされていません。"
+		},
+		"ADVANCED": "詳細設定",
+		"BROWSER_AUDIO_VIDEO": "オーディオ/ビデオおよびプレゼンテーション",
+		"PRESENTATION_ONLY": "プレゼンテーションのみ",
+		"CALL_ME": "コールミー",
+		"VIDEO_THUMBNAIL": "ビデオのサムネイル",
+		"OPEN_RECURRING_MEETING": "選択：",
+		"OCCURRENCE": "開催回数",
+		"SERIES": "繰り返し",
+		"TIME": {
+			"MONTHS": "月",
+			"YEARS": "年",
+			"DAYS": "日",
+			"HOURS": "時",
+			"MINUTES": "分",
+			"SECONDS": "秒"
+		},
+		"DURATIONS": {
+			"15M": "15 分",
+			"30M": "30 分",
+			"1H": "1 時間",
+			"2H": "2 時間",
+			"3H": "3 時間",
+			"6H": "6 時間"
+		},
+		"SEND": "送信",
+		"SAVE": "保存",
+		"INCORRECT_INPUT": "入力が不正です",
+		"TIME_IN_THE_PAST_WARN": "開始日時を過去の時間に指定することはできません。",
+		"SYNCHRONIZED_FROM_OUTLOOK": "（Microsoft Outlook から読み取り専用として同期されます）",
+		"DELETE": "削除",
+		"DELETE_CONFIRM_TEXT": "削除しますか？",
+		"CANCEL": "キャンセル",
+		"CLOSE": "閉じる",
+		"OK": "OK",
+		"EMAIL": "電子メール：",
+		"PHONE": "電話番号：",
+		"TERMINAL_CONFLICT": "1 つ以上の選択済みエンドポイントは現在ビジー状態です",
+		"PIN_REQUEST": {
+			"TITLE_PIN_ASSIGN": "この会議のワンタイム PIN を指定してください。使用できるのは数字のみです。",
+			"ENTER_PIN": "PIN を入力"
+		},
+		"ERROR": {
+			"NOT_VALID_TIME": "時間または形式が正しくありません。正しい時間形式は「X:XX AM」または「XX:XX AM」です",
+			"CAPTION": "エラーが発生しました",
+			"VALIDATION_CAPTION": "検証フィールドの更新に失敗しています",
+			"THESE_FIELDS_DIDNT_PASS_VALID": "これらのフィールドを検証パスできませんでした：",
+			"UNKNOWN_VALIDATION_ERROR": "不明な検証エラー。サーバー管理者にお問い合わせください。",
+			"VIRTUAL_CONFERENCE_ID_CONFLICTED": "仮想会議 ID が競合しています。別の仮想会議室を選択するか、この会議を別の時間にスケジュールしてください。",
+			"SERVICE_UNAVAILABLE": "サーバーから応答がないか、サーバーエラーが発生しています。後でもう一度お試しください。",
+			"SERVICE_INTERNAL_ERROR": "サーバーで内部エラーが発生したか、設定が間違っているため、要求を処理できませんでした。サーバーの管理者にお問い合わせください。",
+			"MISSING_REQUEST_PARAM": "要求パラメータが見つかりません。管理者にお問い合わせください。",
+			"VIRTUAL_ROOM_REQUIRED": "会議をスケジュール設定する場合、仮想会議室のみ設定できます。",
+			"ERROR_INVALID_P2P_INFO": "このポイントツーポイント会議は、以下の必要条件を満たしていないため作成できません：\n1. この通話には 2 つのエンドポイントがあります。\n2. いずれのエンドポイントも SIP エンドポイントではありません。",
+			"USER_ID_REQUEST_ERROR": "ユーザー ID 要求に対してサーバーから応答がありません。しばらく待ってから再試行するか、サーバー管理者にお問い合わせください。",
+			"NON_SCOPIA_USER": "Scopia 以外のユーザーは追加できません",
+			"ACCESS_DENIED": "アクセスが拒否されました。",
+			"TOKEN_EXPIRED": "認証トークンの有効期限が切れています。",
+			"TOKEN_INVALID": "認証トークンが無効です。",
+			"ERROR": "予期しないエラーが発生しました。サーバーの管理者にお問い合わせください。",
+			"MCU_RESOURCE_SHORTAGE": "会議のスケジュール予約ができません（Avaya Meetings Media Server の容量上限に到達しています）。\n会議設定を確認して再試行してください。",
+			"ERC_WAITING_ROOM_REQUIRED_IN_TE": "TE 環境で待合室が必要です。会議の設定を確認してください。",
+			"ERROR_DAYOFWEEKS_REQUIRED": "希望する繰り返しの日数を指定してください"
+		},
+		"RECURRING": {
+			"TITLE": "定期会議",
+			"RECURRING": "繰り返し：",
+			"REPEATS": "繰り返し",
+			"DAILY": "毎日",
+			"WEEKLY": "毎週",
+			"MONTHLY": "毎月",
+			"YEARLY": "毎年",
+			"EVERY": "毎",
+			"EVERY_FEMALE": "毎",
+			"DAYS": "日",
+			"WEEKS": "週",
+			"MONTHS": "ヵ月",
+			"YEARS": "年",
+			"ON": "曜日",
+			"QUICK_OPTIONS": {
+				"ONCE": "1 回のみ",
+				"DAY_NUMBER_OF_MONTH": "毎月 {{dayOfMonth}} 日",
+				"EVERY_DAY": "毎日",
+				"EVERY_SUNDAY": "毎週日曜日",
+				"EVERY_MONDAY": "毎週月曜日",
+				"EVERY_TUESDAY": "毎週火曜日",
+				"EVERY_WEDNESDAY": "毎週水曜日",
+				"EVERY_THURSDAY": "毎週木曜日",
+				"EVERY_FRIDAY": "毎週金曜日",
+				"EVERY_SATURDAY": "毎週土曜日"
+			},
+			"CUSTOM": "カスタム",
+			"DESCRIPTION_LINES": {
+				"DAILY": "{{meetingDateString}} までの期間、毎 {{numberOfRepeats}} 日の{{meetingTimeString}} から {{meetingEndTimeString}} まで実施されます。",
+				"DAILY_WITH_ENDDATE": "{{meetingDateString}} から {{meetingEndDateString}} までの期間、毎 {{numberOfRepeats}} 日の{{meetingTimeString}} から {{meetingEndTimeString}} まで実施されます。",
+				"WEEKLY": "{{meetingDateString}} までの期間、毎 {{numberOfRepeats}} 週の {{weeklyDaysString}}に {{meetingTimeString}} から {{meetingEndTimeString}} まで実施されます。",
+				"WEEKLY_WITH_ENDDATE": "{{meetingDateString}} から {{meetingEndDateString}} までの期間、毎 {{numberOfRepeats}} 週の{{weeklyDaysString}}に {{meetingTimeString}} から {{meetingEndTimeString}} まで実施されます。",
+				"MONTHLY": "{{meetingDateString}} までの期間、毎 {{numberOfRepeats}} ヶ月の {{selectedMonthDay}} 日に {{meetingTimeString}} から {{meetingEndTimeString}} まで実施されます。",
+				"MONTHLY_WITH_ENDDATE": "{{meetingDateString}} から {{meetingEndDateString}} までの期間、 {{numberOfRepeats}} ヶ月に一度の {{selectedMonthDay}} 日に {{meetingTimeString}} から {{meetingEndTimeString}} まで実施されます。",
+				"YEARLY_ENDDATE": "{{meetingDateString}} の {{meetingTimeString}} から {{meetingEndTimeString}} まで有効です。",
+				"OCCURS": "頻度",
+				"OF_EVERY_YEAR": "毎年",
+				"YEARLY_ON_EVERY": "",
+				"JANUARY": "1 月",
+				"FEBRUARY": "2 月",
+				"MARCH": "3 月",
+				"APRIL": "4 月",
+				"MAY": "5 月",
+				"JUNE": "6 月",
+				"JULY": "7 月",
+				"AUGUST": "8 月",
+				"SEPTEMBER": "9 月",
+				"OCTOBER": "10 月",
+				"NOVEMBER": "11 月",
+				"DECEMBER": "12 月",
+				"MONDAY": "月曜",
+				"TUESDAY": "火曜",
+				"WEDNESDAY": "水曜",
+				"THURSDAY": "木曜",
+				"FRIDAY": "金曜",
+				"SATURDAY": "土曜",
+				"SUNDAY": "日曜",
+				"WEEKDAY": "平日",
+				"WEEKENDDAY": "週末",
+				"ANYDAY": "日",
+				"FIRST": "1 番目",
+				"SECOND": "2 番目",
+				"THIRD": "3 番目",
+				"FOURTH": "4 番目",
+				"LAST": "最後",
+				"OF": "/"
+			}
+		},
+		"SELECT_LOCATION": {
+			"TITLE": "場所",
+			"VIRTUAL_ROOM": "仮想会議室",
+			"NEW_MEETING": "新規会議",
+			"MEETING_ID": "会議 ID：",
+			"MEETING_TYPE": "会議の種類：",
+			"SEARCH": "検索",
+			"SEARCH_ROOM": "会議室を検索",
+			"FOUND_ROOMS": "見つかった会議室",
+			"YOUR_ROOMS": "会議室",
+			"DELEGATED_ROOMS": "代理会議室",
+			"SELECT_VIRTUAL_ROOM": "会議用の仮想会議室を選択してください",
+			"ERROR": {
+				"MEETING_ID_MUST_START": "数字のみを使用し、先頭を {{number}} にする必要があります",
+				"MEETING_ID_MINIMAL_LENGTH": "最小文字数は {{n}} 文字です",
+				"MEETING_ID_REQUIRED": "会議 ID は必須です"
+			}
+		},
+		"ADVANCED_OPTIONS": {
+			"TITLE": "会議オプション",
+			"MEETING_PIN": "会議 PIN：",
+			"MEETING_HOST": "会議ホスト：",
+			"MODERATOR_PIN": "モデレーター PIN：",
+			"PLACE_PARTICIPANTS": "モデレーターが会議に参加するまで参加者を「待合室」で待機させる",
+			"RECORD_MEETING": "この会議を記録する",
+			"TERMINATE_TIME": "予定時間に会議を終了する前に通知する（分）：",
+			"TERMINATE_LEFT": "全参加者が会議室を退出した後に会議を終了する（分）：",
+			"RESERVED_PORTS": "予約済みポート",
+			"FULL": "フル HD：",
+			"HIGH": "高解像度：",
+			"STANDARD": "標準解像度：",
+			"AUDIO_ONLY_WITH_WC": "オーディオおよび Web：",
+			"ENDPOINTS_OPTIONS": "エンドポイントオプション",
+			"PARTICIPANTS": "参加者",
+			"AUTO_DIAL": "自動ダイヤル",
+			"ON_MASTER": "マスター MCU 上",
+			"NONE": "なし",
+			"OPTIONAL": "オプション",
+			"REQUIRED": "必須",
+			"SELECT": "選択",
+			"SELECT_FOR": "{{user}}に使用するエンドポイントを選択",
+			"SELECTED_FOR": "{{endpoint}}が{{user}}に対して選択されました",
+			"SPECIAL_EVENT": "イベント会議",
+			"VIDEO_LAYOUT": "ビデオレイアウト",
+			"VIDEO_LAYOUT_OPTIONS": {
+				"PARTICIPANTS": "参加者",
+				"MEETING_LAYOUT": "会議レイアウト",
+				"DYNAMIC": "ダイナミック",
+				"CLEAR_SELECTED": "選択をクリア"
+			},
+			"LINK_FOR_PARTICIPANTS": "参加者用リンク",
+			"LINK_FOR_MODERATORS": "モデレーター用リンク"
+		},
+		"SELECT_ENDPOINT": {
+			"SELECT_AN_ENDPOINT": "エンドポイントを選択",
+			"BY_DIRECTORY": "ディレクトリから選択",
+			"BY_ADDRESS": "アドレスで検索",
+			"NAME": "名前：",
+			"PROTOCOL": "プロトコル",
+			"RESTRICTED_MODE": "制限モード",
+			"3G": "3G",
+			"ADDRESS": "アドレス：",
+			"BANDWIDTH": "帯域幅：",
+			"SEARCH_ENDPOINT": "エンドポイントを検索",
+			"BANDWIDTH_DEFAULT": "既定",
+			"BANDWIDTH_AUDIO": "音声",
+			"BANDWIDTH_AUDIO_56": "56 音声",
+			"BANDWIDTH_VIDEO_56": "56 音声",
+			"NONE": "なし",
+			"ERROR": {
+				"ENDPOINT_INVITED": "このエンドポイントは招待済です"
+			},
+			"MOBILE": "携帯"
+		}
+	},
 	"GENERAL": {
 		"ERROR": {
 			"SESSION_HAS_EXPIRED": "セッションの有効期限が切れました。続行するにはログインしてください",
