--- a/src/assets/i18n/ko-KR.json
+++ b/src/assets/i18n/ko-KR.json
@@ -255,6 +255,271 @@
 	"ON": "켜짐",
 	"OFF": "꺼짐",
 	"DISABLED": "비활성화됨",
+	"MEETING": {
+		"TAB_NAME_MEET_NOW": "지금 회의하기",
+		"IN_PROGRESS": "진행 중",
+		"JOIN": "참가",
+		"YOU": "귀하",
+		"AND": "및",
+		"OTHERS": "기타",
+		"TITLE": "회의 예약",
+		"TITLE_UPDATE": "회의 편집",
+		"SUBJECT": "주제:",
+		"SUBJECT_PLACEHOLDER": "주제 입력",
+		"DEFAULT_MEETING_SUBJECT": "회의 {{number}}",
+		"POINT_TO_POINT_MEETING_SUBJECT": "새 회의",
+		"TO": "수신자: ",
+		"PARTICIPANTS_COUNT": " 참가자 수/ ",
+		"TO_PANELIST": "패널리스트:",
+		"TO_PANELIST_WITH_NUMBER": "패널리스트 번호{{number}}:",
+		"TO_PLACEHOLDER": "이름 또는 이메일 입력",
+		"TO_PARTICIPANTS": "참가자:",
+		"PANELIST_NUMBER": "패널리스트 번호:",
+		"START_TIME": "시작 시간:",
+		"END_DATE": "종료일",
+		"DURATION": "길이:",
+		"LOCATION": "위치:",
+		"MESSAGE": "메시지",
+		"MESSAGE_PLACEHOLDER": "회의 상세정보 입력...",
+		"ENDPOINTS": "엔드포인트",
+		"SEARCH_ENDPOINTS": "엔드포인트 검색",
+		"SELECT_ENDPOINTS": "엔드포인트 선택",
+		"BROADCAST": {
+			"ADD_AN_IMAGE": "뷰어가 이 브로드캐스트를 식별하는 데 도움이 되는 이미지 추가",
+			"BROADCAST": "브로드캐스트",
+			"BROADCAST_THIS_MEETING": "이 회의 브로드캐스팅(실시간 스트림)",
+			"EMAIL_INVITE": "이메일 초대",
+			"COPY_LINK": "링크 복사",
+			"CANCEL": "취소",
+			"OPTIONAL": "옵션",
+			"REQUIRED": "필수",
+			"DESCRIPTION": "브로드캐스트의 설명 입력",
+			"RECORDING_PROFILE": "프로파일 레코딩 및 브로드캐스트:",
+			"DEFAULT": "기본값",
+			"SELECT_PROFILE": "프로파일 선택",
+			"BROADCAST_PIN": "브로드캐스트 PIN:",
+			"SAME_AS_MEETING_PIN": "회의 PIN과 동일",
+			"BROADCAST_ACCESS": "브로드캐스트에 액세스 허용:",
+			"BROADCAST_ACCESS_LIST": {
+				"ALL_USERS": "모든 사용자(공개)",
+				"ALL_AUTHENTICATED": "모든 인증된 사용자",
+				"SPECIFIC_USERS": "특정 사용자:",
+				"PRIVATE": "비공개"
+			},
+			"SHOW_PUBLIC": "공개 이벤트 목록에서 브로드캐스트 표시",
+			"AUTO_RECORD": "브로드캐스트 자동 레코딩",
+			"ENABLE_Q_A": "뷰어와 Q&A 채팅 활성화",
+			"MODERATOR_PIN": "Q&A 호스트 PIN:",
+			"Q_A_TOOLTIP": "Q&A 채팅의 추가 호스트를 허용하려면 PIN 입력",
+			"BROADCAST_UNAVAILABLE": "반복 회의에서는 브로드캐스트가 지원되지 않습니다."
+		},
+		"ADVANCED": "고급 설정",
+		"BROWSER_AUDIO_VIDEO": "오디오/비디오 + 프레젠테이션",
+		"PRESENTATION_ONLY": "프레젠테이션 전용",
+		"CALL_ME": "나에게 전화하기",
+		"VIDEO_THUMBNAIL": "비디오 축소판",
+		"OPEN_RECURRING_MEETING": "열기",
+		"OCCURRENCE": "되풀이 항목",
+		"SERIES": "시리즈",
+		"TIME": {
+			"MONTHS": "월",
+			"YEARS": "년",
+			"DAYS": "일",
+			"HOURS": "시간",
+			"MINUTES": "분",
+			"SECONDS": "초"
+		},
+		"DURATIONS": {
+			"15M": "15분",
+			"30M": "30분",
+			"1H": "1시간",
+			"2H": "2시간",
+			"3H": "3시간",
+			"6H": "6시간"
+		},
+		"SEND": "전송",
+		"SAVE": "저장",
+		"INCORRECT_INPUT": "올바르지 않은 입력",
+		"TIME_IN_THE_PAST_WARN": "시작 시간은 과거일 수 없습니다.",
+		"SYNCHRONIZED_FROM_OUTLOOK": "(읽기 전용으로 Microsoft Outlook에서 동기화됨)",
+		"DELETE": "삭제",
+		"DELETE_CONFIRM_TEXT": "삭제하시겠습니까?",
+		"CANCEL": "취소",
+		"CLOSE": "닫기",
+		"OK": "확인",
+		"EMAIL": "이메일: ",
+		"PHONE": "전화: ",
+		"TERMINAL_CONFLICT": "선택한 하나 이상의 엔트포인트가 현재 사용 중입니다.",
+		"PIN_REQUEST": {
+			"TITLE_PIN_ASSIGN": "이 회의에 대해 일회용 PIN을 지정하십시오. 숫자만 허용됩니다.",
+			"ENTER_PIN": "PIN 입력"
+		},
+		"ERROR": {
+			"NOT_VALID_TIME": "시간 또는 형식이 잘못되었습니다. 시간은 \"오전 X:XX AM\" 또는 \"오전 XX:XX\" 형식이어야 합니다.",
+			"CAPTION": "오류가 발생했습니다.",
+			"VALIDATION_CAPTION": "유효성 검사 필드에 실패했습니다.",
+			"THESE_FIELDS_DIDNT_PASS_VALID": "유효성 검사에 실패한 필드:",
+			"UNKNOWN_VALIDATION_ERROR": "알 수 없는 유효성 검사 오류입니다. 서버 관리자에 문의하십시오.",
+			"VIRTUAL_CONFERENCE_ID_CONFLICTED": "가상 다자간 통화 ID가 충돌합니다. 다른 가상 룸을 선택하거나 이 회의를 다른 시간으로 예약하십시오.",
+			"SERVICE_UNAVAILABLE": "서버 또는 서버 오류로부터 응답이 없습니다. 나중에 다시 시도하십시오.",
+			"SERVICE_INTERNAL_ERROR": "서버에서 내부 오류가 발생했거나 구성이 잘못되어 요청을 완료할 수 없습니다. 서버 관리자에게 문의하십시오.",
+			"MISSING_REQUEST_PARAM": "요청 매개변수가 누락되었습니다. 관리자에게 문의하십시오.",
+			"VIRTUAL_ROOM_REQUIRED": "회의 예약 시 가상 회의실만 허용됩니다.",
+			"ERROR_INVALID_P2P_INFO": "다음 요구 사항 중 하나 이상이 부합하지 않았으므로 일대일 회의가 예약되지 않았습니다.\n1. 이 통화에 2개의 엔드포인트가 있습니다.\n2. 개의 엔드포인트 모두 SIP 엔드포인트가 아닙니다.",
+			"USER_ID_REQUEST_ERROR": "사용자 ID 요청에 대해 서버의 응답이 없습니다. 잠시 기다린 후 다시 시도하거나 서버 관리자에게 문의하십시오.",
+			"NON_SCOPIA_USER": "비 Scopia 사용자를 추가할 수 없습니다.",
+			"ACCESS_DENIED": "액세스가 거부되었습니다.",
+			"TOKEN_EXPIRED": "인증 토큰이 만료되었습니다.",
+			"TOKEN_INVALID": "인증 토큰이 잘못되었습니다.",
+			"ERROR": "예기치 않은 오류가 발생했습니다. 서버 관리자에게 문의하십시오.",
+			"MCU_RESOURCE_SHORTAGE": "회의를 예약할 수 없습니다(Avaya Meetings Media Server 용량 초과).\n회의 설정 사항을 확인하고 다시 시도하십시오.",
+			"ERC_WAITING_ROOM_REQUIRED_IN_TE": "TE 환경에서 대기실은 필수입니다. 회의 설정을 확인하십시오.",
+			"ERROR_DAYOFWEEKS_REQUIRED": "원하는 반복 일수를 지정해야 합니다."
+		},
+		"RECURRING": {
+			"TITLE": "회의 반복",
+			"RECURRING": "반복:",
+			"REPEATS": "반복",
+			"DAILY": "일간",
+			"WEEKLY": "주간",
+			"MONTHLY": "월간",
+			"YEARLY": "매년",
+			"EVERY": "매",
+			"EVERY_FEMALE": "매",
+			"DAYS": "일",
+			"WEEKS": "주",
+			"MONTHS": "개월",
+			"YEARS": "년",
+			"ON": "요일",
+			"QUICK_OPTIONS": {
+				"ONCE": "한 번만",
+				"DAY_NUMBER_OF_MONTH": "매월 {{dayOfMonth}}일",
+				"EVERY_DAY": "매일",
+				"EVERY_SUNDAY": "매주 일요일",
+				"EVERY_MONDAY": "매주 월요일",
+				"EVERY_TUESDAY": "매주 화요일",
+				"EVERY_WEDNESDAY": "매주 수요일",
+				"EVERY_THURSDAY": "매주 목요일",
+				"EVERY_FRIDAY": "매주 금요일",
+				"EVERY_SATURDAY": "매주 토요일"
+			},
+			"CUSTOM": "사용자 정의",
+			"DESCRIPTION_LINES": {
+				"DAILY": "{{meetingDateString}}부터 매 {{numberOfRepeats}}일마다 {{meetingTimeString}} ~ {{meetingEndTimeString}}에 반복하여 개최",
+				"DAILY_WITH_ENDDATE": "{{meetingDateString}}부터 {{meetingEndDateString}}까지 매 {{numberOfRepeats}}일마다 {{meetingTimeString}} ~ {{meetingEndTimeString}}에 반복하여 개최",
+				"WEEKLY": "{{meetingDateString}}부터 매 {{numberOfRepeats}}주마다 {{weeklyDaysString}}에 {{meetingTimeString}} ~ {{meetingEndTimeString}}에 반복하여 개최",
+				"WEEKLY_WITH_ENDDATE": "{{meetingDateString}}부터 {{meetingEndDateString}}까지 매 {{numberOfRepeats}}주마다 {{weeklyDaysString}}에 {{meetingTimeString}} ~ {{meetingEndTimeString}}에 반복하여 개최",
+				"MONTHLY": "{{meetingDateString}}부터 {{numberOfRepeats}}개월마다 {{selectedMonthDay}}일에 {{meetingTimeString}} ~ {{meetingEndTimeString}}에 반복하여 개최",
+				"MONTHLY_WITH_ENDDATE": "{{meetingDateString}}부터 {{numberOfRepeats}}개월마다 {{selectedMonthDay}}일에 {{meetingEndDateString}}까지 {{meetingTimeString}} ~ {{meetingEndTimeString}}에 반복하여 개최",
+				"YEARLY_ENDDATE": "{{meetingTimeString}} ~ {{meetingEndTimeString}}까지 유효한 {{meetingDateString}}",
+				"OCCURS": "반복",
+				"OF_EVERY_YEAR": "매년",
+				"YEARLY_ON_EVERY": "",
+				"JANUARY": "1월",
+				"FEBRUARY": "2월",
+				"MARCH": "3월",
+				"APRIL": "4월",
+				"MAY": "5월",
+				"JUNE": "6월",
+				"JULY": "7월",
+				"AUGUST": "8월",
+				"SEPTEMBER": "9월",
+				"OCTOBER": "10월",
+				"NOVEMBER": "11월",
+				"DECEMBER": "12월",
+				"MONDAY": "월요일",
+				"TUESDAY": "화요일",
+				"WEDNESDAY": "수요일",
+				"THURSDAY": "목요일",
+				"FRIDAY": "금요일",
+				"SATURDAY": "토요일",
+				"SUNDAY": "일요일",
+				"WEEKDAY": "주중",
+				"WEEKENDDAY": "주말",
+				"ANYDAY": "일",
+				"FIRST": "첫 번째",
+				"SECOND": "초",
+				"THIRD": "세 번째",
+				"FOURTH": "네 번째",
+				"LAST": "마지막",
+				"OF": "/"
+			}
+		},
+		"SELECT_LOCATION": {
+			"TITLE": "위치",
+			"VIRTUAL_ROOM": "가상 회의실",
+			"NEW_MEETING": "새 회의",
+			"MEETING_ID": "회의 ID:",
+			"MEETING_TYPE": "회의 유형:",
+			"SEARCH": "검색",
+			"SEARCH_ROOM": "회의실 검색",
+			"FOUND_ROOMS": "찾은 회의실",
+			"YOUR_ROOMS": "내 회의실",
+			"DELEGATED_ROOMS": "위임된 회의실",
+			"SELECT_VIRTUAL_ROOM": "회의를 위해 가상 회의실을 선택하십시오.",
+			"ERROR": {
+				"MEETING_ID_MUST_START": "숫자만 포함하며 {{number}}(으)로 시작해야 합니다.",
+				"MEETING_ID_MINIMAL_LENGTH": "최소 길이는 {{n}}자입니다.",
+				"MEETING_ID_REQUIRED": "회의 ID는 필수 입력 항목입니다."
+			}
+		},
+		"ADVANCED_OPTIONS": {
+			"TITLE": "회의 옵션",
+			"MEETING_PIN": "회의 PIN:",
+			"MEETING_HOST": "회의 호스트:",
+			"MODERATOR_PIN": "호스트 PIN:",
+			"PLACE_PARTICIPANTS": "호스트가 회의에 참가하기 전에 참가자를 '대기실'에 배치",
+			"RECORD_MEETING": "이 회의 레코딩",
+			"TERMINATE_TIME": "예정된 시간에 종료하고 다음 시간 전에 알림(분): ",
+			"TERMINATE_LEFT": "모든 참가자가 회의에서 나간 후 다음 시간이 지나면 종료(분):",
+			"RESERVED_PORTS": "예약된 포트",
+			"FULL": "풀 HD:",
+			"HIGH": "고해상도:",
+			"STANDARD": "표준 해상도:",
+			"AUDIO_ONLY_WITH_WC": "오디오 + 웹:",
+			"ENDPOINTS_OPTIONS": "엔드포인트 옵션",
+			"PARTICIPANTS": "참가자",
+			"AUTO_DIAL": "자동 다이얼",
+			"ON_MASTER": "마스터 MCU",
+			"NONE": "없음",
+			"OPTIONAL": "옵션",
+			"REQUIRED": "필수",
+			"SELECT": "선택",
+			"SELECT_FOR": "{{user}}님의 엔드포인트 선택",
+			"SELECTED_FOR": "{{user}}님에 대해 {{endpoint}} 엔드포인트가 선택됨",
+			"SPECIAL_EVENT": "이벤트 다자간 통화",
+			"VIDEO_LAYOUT": "비디오 레이아웃",
+			"VIDEO_LAYOUT_OPTIONS": {
+				"PARTICIPANTS": "참가자",
+				"MEETING_LAYOUT": "회의 레이아웃",
+				"DYNAMIC": "동적",
+				"CLEAR_SELECTED": "선택된 항목 지우기"
+			},
+			"LINK_FOR_PARTICIPANTS": "참가자 링크",
+			"LINK_FOR_MODERATORS": "호스트 링크"
+		},
+		"SELECT_ENDPOINT": {
+			"SELECT_AN_ENDPOINT": "엔드포인트 선택",
+			"BY_DIRECTORY": "디렉토리별",
+			"BY_ADDRESS": "주소",
+			"NAME": "이름:",
+			"PROTOCOL": "프로토콜:",
+			"RESTRICTED_MODE": "제한된 모드",
+			"3G": "3G",
+			"ADDRESS": "주소:",
+			"BANDWIDTH": "대역폭:",
+			"SEARCH_ENDPOINT": "엔드포인트 검색",
+			"BANDWIDTH_DEFAULT": "기본값",
+			"BANDWIDTH_AUDIO": "오디오",
+			"BANDWIDTH_AUDIO_56": "56 오디오",
+			"BANDWIDTH_VIDEO_56": "56 오디오",
+			"NONE": "없음",
+			"ERROR": {
+				"ENDPOINT_INVITED": "엔드포인트가 초대되었습니다."
+			},
+			"MOBILE": "모바일"
+		}
+	},
 	"GENERAL": {
 		"ERROR": {
 			"SESSION_HAS_EXPIRED": "세션이 만료되었습니다. 계속하려면 로그인하십시오.",
