--- a/src/assets/i18n/ru-RU.json
+++ b/src/assets/i18n/ru-RU.json
@@ -255,6 +255,271 @@
 	"ON": "Вкл.",
 	"OFF": "Выкл.",
 	"DISABLED": "Отключено",
+	"MEETING": {
+		"TAB_NAME_MEET_NOW": "Начать собрание сейчас",
+		"IN_PROGRESS": "Выполняется",
+		"JOIN": "Присоединиться",
+		"YOU": "Вы",
+		"AND": "и",
+		"OTHERS": "другие",
+		"TITLE": "Запланировать собрание",
+		"TITLE_UPDATE": "Редактировать собрание",
+		"SUBJECT": "Тема:",
+		"SUBJECT_PLACEHOLDER": "Введите тему",
+		"DEFAULT_MEETING_SUBJECT": "Собрание {{number}}",
+		"POINT_TO_POINT_MEETING_SUBJECT": "Новое собрание",
+		"TO": "Кому: ",
+		"PARTICIPANTS_COUNT": " участников из ",
+		"TO_PANELIST": "Члену рабочей группы:",
+		"TO_PANELIST_WITH_NUMBER": "Члену рабочей группы №{{number}}:",
+		"TO_PLACEHOLDER": "Введите имя или адрес электронной почты",
+		"TO_PARTICIPANTS": "Участникам:",
+		"PANELIST_NUMBER": "Номер члена рабочей группы:",
+		"START_TIME": "Начало:",
+		"END_DATE": "Дата окончания",
+		"DURATION": "Продолжительность:",
+		"LOCATION": "Местоположение:",
+		"MESSAGE": "Сообщение",
+		"MESSAGE_PLACEHOLDER": "Введите сведения о собрании...",
+		"ENDPOINTS": "Оконечные устройства",
+		"SEARCH_ENDPOINTS": "Поиск оконечных устройств",
+		"SELECT_ENDPOINTS": "Выбрать оконечное устройство",
+		"BROADCAST": {
+			"ADD_AN_IMAGE": "Добавьте изображение, чтобы помочь зрителям узнать эту трансляцию",
+			"BROADCAST": "Трансляция",
+			"BROADCAST_THIS_MEETING": "Транслировать это собрание (прямая трансляция)",
+			"EMAIL_INVITE": "Пригласить по электронной почте",
+			"COPY_LINK": "Копировать ссылку",
+			"CANCEL": "Отмена",
+			"OPTIONAL": "Необязательное",
+			"REQUIRED": "Обязательное поле",
+			"DESCRIPTION": "Введите описание трансляции.",
+			"RECORDING_PROFILE": "Профиль записи и трансляции",
+			"DEFAULT": "По умолчанию",
+			"SELECT_PROFILE": "Выбрать профиль",
+			"BROADCAST_PIN": "PIN-код трансляции:",
+			"SAME_AS_MEETING_PIN": "Совпадает с PIN-кодом собрания",
+			"BROADCAST_ACCESS": "Трансляция доступна здесь:",
+			"BROADCAST_ACCESS_LIST": {
+				"ALL_USERS": "Все пользователи (открытая)",
+				"ALL_AUTHENTICATED": "Все аутентифицированные пользователи",
+				"SPECIFIC_USERS": "Определенные пользователи:",
+				"PRIVATE": "Личная"
+			},
+			"SHOW_PUBLIC": "Показывать трансляцию в списке общедоступных событий",
+			"AUTO_RECORD": "Автоматически записывать трансляцию",
+			"ENABLE_Q_A": "Разрешить чат «Вопросы и ответы» со зрителями",
+			"MODERATOR_PIN": "PIN-код модератора вопросов и ответов:",
+			"Q_A_TOOLTIP": "Введите PIN-код, чтобы разрешить участие дополнительных модераторов в чате «Вопросы и ответы»",
+			"BROADCAST_UNAVAILABLE": "Трансляция регулярных собраний не поддерживается."
+		},
+		"ADVANCED": "Дополнительно",
+		"BROWSER_AUDIO_VIDEO": "Аудио/видео и презентация",
+		"PRESENTATION_ONLY": "Только презентацию",
+		"CALL_ME": "Уведомляющий вызов",
+		"VIDEO_THUMBNAIL": "Эскиз видео",
+		"OPEN_RECURRING_MEETING": "Открыть",
+		"OCCURRENCE": "Текущее",
+		"SERIES": "Весь цикл",
+		"TIME": {
+			"MONTHS": "мес.",
+			"YEARS": "г.",
+			"DAYS": "дн.",
+			"HOURS": "ч",
+			"MINUTES": "мин.",
+			"SECONDS": "с"
+		},
+		"DURATIONS": {
+			"15M": "15 минут",
+			"30M": "30 минут",
+			"1H": "1 час",
+			"2H": "2 часа",
+			"3H": "3 часа",
+			"6H": "6 часов"
+		},
+		"SEND": "Отправить",
+		"SAVE": "Сохранить",
+		"INCORRECT_INPUT": "Неверные входные данные",
+		"TIME_IN_THE_PAST_WARN": "Время начала не может быть в прошлом.",
+		"SYNCHRONIZED_FROM_OUTLOOK": "(синхронизировано из Microsoft Outlook только для чтения)",
+		"DELETE": "Удалить",
+		"DELETE_CONFIRM_TEXT": "Удалить?",
+		"CANCEL": "Отмена",
+		"CLOSE": "Закрыть",
+		"OK": "ОК",
+		"EMAIL": "Адрес электронной почты: ",
+		"PHONE": "Телефон: ",
+		"TERMINAL_CONFLICT": "В это время одно или несколько оконечных устройств заняты",
+		"PIN_REQUEST": {
+			"TITLE_PIN_ASSIGN": "Введите одноразовый PIN-код для этого собрания. Допускаются только цифры.",
+			"ENTER_PIN": "Введите PIN-код"
+		},
+		"ERROR": {
+			"NOT_VALID_TIME": "Неверное время или формат. Допустимые форматы времени: \"X:XX AM\" или \"XX:XX AM\"",
+			"CAPTION": "Произошла ошибка",
+			"VALIDATION_CAPTION": "Сбой полей проверки.",
+			"THESE_FIELDS_DIDNT_PASS_VALID": "Эти поля не прошли проверку:",
+			"UNKNOWN_VALIDATION_ERROR": "Неизвестная ошибка проверки. Свяжитесь с администратором сервера.",
+			"VIRTUAL_CONFERENCE_ID_CONFLICTED": "Конфликт идентификатора виртуальной конференции. Воспользуйтесь другой виртуальной комнатой или перенесите это собрание на другое время.",
+			"SERVICE_UNAVAILABLE": "Сервер не отвечает, или на сервере произошла ошибка. Повторите попытку.",
+			"SERVICE_INTERNAL_ERROR": "На сервере произошла внутренняя ошибка или ошибка конфигурации, в результате чего серверу не удалось выполнить ваш запрос. Обратитесь к администратору сервера.",
+			"MISSING_REQUEST_PARAM": "Отсутствует параметр запроса. Обратитесь к вашему администратору.",
+			"VIRTUAL_ROOM_REQUIRED": "При планировании собрания разрешена только виртуальная комната",
+			"ERROR_INVALID_P2P_INFO": "Собрание типа \"точка-точка\" не запланировано, так как не выполнено одно или несколько из следующих условий:\n1. Для звонка задано две конечные точки.\n2. Не указана конечная точка SIP.",
+			"USER_ID_REQUEST_ERROR": "Нет ответа с сервера на запрос идентификатора пользователя. Повторите попытку позднее или обратитесь к администратору сервера.",
+			"NON_SCOPIA_USER": "Невозможно добавить пользователя не Scopia",
+			"ACCESS_DENIED": "Доступ запрещен.",
+			"TOKEN_EXPIRED": "Срок действия маркера аутентификации истек.",
+			"TOKEN_INVALID": "Недопустимый маркер аутентификации.",
+			"ERROR": "Произошла непредвиденная ошибка. Обратитесь к администратору сервера.",
+			"MCU_RESOURCE_SHORTAGE": "Невозможно назначить собрание (достигнут лимит пропускной способности Avaya Meetings Media Server).\nПроверьте настройки собрания и повторите попытку.",
+			"ERC_WAITING_ROOM_REQUIRED_IN_TE": "Комната ожидания необходима в среде ТЕ, проверьте настройки вашего собрания.",
+			"ERROR_DAYOFWEEKS_REQUIRED": "Укажите дни повтора"
+		},
+		"RECURRING": {
+			"TITLE": "Регулярное собрание",
+			"RECURRING": "Повторения:",
+			"REPEATS": "Частота проведения",
+			"DAILY": "Ежедневно",
+			"WEEKLY": "Еженедельно",
+			"MONTHLY": "Ежемесячно",
+			"YEARLY": "Ежегодно",
+			"EVERY": "Каждые",
+			"EVERY_FEMALE": "Каждые",
+			"DAYS": "дн.",
+			"WEEKS": "нед.",
+			"MONTHS": "мес.",
+			"YEARS": "Год(ы)",
+			"ON": "В",
+			"QUICK_OPTIONS": {
+				"ONCE": "Один раз",
+				"DAY_NUMBER_OF_MONTH": "{{dayOfMonth}} день каждого месяца",
+				"EVERY_DAY": "Каждый день",
+				"EVERY_SUNDAY": "Каждое воскресенье",
+				"EVERY_MONDAY": "Каждый понедельник",
+				"EVERY_TUESDAY": "Каждый вторник",
+				"EVERY_WEDNESDAY": "Каждую среду",
+				"EVERY_THURSDAY": "Каждый четверг",
+				"EVERY_FRIDAY": "Каждую пятницу",
+				"EVERY_SATURDAY": "Каждую субботу"
+			},
+			"CUSTOM": "Настраиваемый",
+			"DESCRIPTION_LINES": {
+				"DAILY": "Проводится каждый ({{numberOfRepeats}}) день, начиная с {{meetingDateString}} с {{meetingTimeString}} до {{meetingEndTimeString}}.",
+				"DAILY_WITH_ENDDATE": "Проводится каждые {{numberOfRepeats}} дн., Даты: с {{meetingDateString}} по {{meetingEndDateString}}. Время: с {{meetingTimeString}} до {{meetingEndTimeString}}.",
+				"WEEKLY": "Проводится каждую {{numberOfRepeats}} нед. по дням: {{weeklyDaysString}}, начиная с {{meetingDateString}} с {{meetingTimeString}} до {{meetingEndTimeString}}.",
+				"WEEKLY_WITH_ENDDATE": "Проводится каждые {{numberOfRepeats}} нед. по дням: {{weeklyDaysString}}. Даты: с {{meetingDateString}} по {{meetingEndDateString}}. Время: с {{meetingTimeString}} до {{meetingEndTimeString}}.",
+				"MONTHLY": "Проводится каждого {{selectedMonthDay}} числа каждые {{numberOfRepeats}} мес., начиная с {{meetingDateString}} с {{meetingTimeString}} до {{meetingEndTimeString}}.",
+				"MONTHLY_WITH_ENDDATE": "Проводится каждого {{selectedMonthDay}}-го числа каждый {{numberOfRepeats}}-й месяц, начиная с {{meetingDateString}} с {{meetingTimeString}} до {{meetingEndTimeString}} и заканчивая {{meetingEndDateString}}.",
+				"YEARLY_ENDDATE": "начиная с {{meetingDateString}} с {{meetingTimeString}} до {{meetingEndTimeString}}.",
+				"OCCURS": "Частота",
+				"OF_EVERY_YEAR": "каждого года",
+				"YEARLY_ON_EVERY": "",
+				"JANUARY": "января",
+				"FEBRUARY": "февраля",
+				"MARCH": "марта",
+				"APRIL": "апреля",
+				"MAY": "мая",
+				"JUNE": "июня",
+				"JULY": "июля",
+				"AUGUST": "августа",
+				"SEPTEMBER": "сентября",
+				"OCTOBER": "октября",
+				"NOVEMBER": "ноября",
+				"DECEMBER": "декабря",
+				"MONDAY": "понедельник",
+				"TUESDAY": "вторник",
+				"WEDNESDAY": "среда",
+				"THURSDAY": "четверг",
+				"FRIDAY": "пятница",
+				"SATURDAY": "суббота",
+				"SUNDAY": "воскресенье",
+				"WEEKDAY": "будний день",
+				"WEEKENDDAY": "выходной день",
+				"ANYDAY": "день",
+				"FIRST": "первый",
+				"SECOND": "второй",
+				"THIRD": "третий",
+				"FOURTH": "четвертый",
+				"LAST": "последний",
+				"OF": "из"
+			}
+		},
+		"SELECT_LOCATION": {
+			"TITLE": "Местоположение",
+			"VIRTUAL_ROOM": "Виртуальная комната",
+			"NEW_MEETING": "Новое собрание",
+			"MEETING_ID": "Идентификатор собрания:",
+			"MEETING_TYPE": "Тип собрания:",
+			"SEARCH": "Поиск",
+			"SEARCH_ROOM": "поиск комнаты",
+			"FOUND_ROOMS": "Найденные комнаты",
+			"YOUR_ROOMS": "Ваши комнаты",
+			"DELEGATED_ROOMS": "Делегированные комнаты",
+			"SELECT_VIRTUAL_ROOM": "Выберите виртуальную комнату для собрания",
+			"ERROR": {
+				"MEETING_ID_MUST_START": "Должен состоять только из чисел и начинаться с {{number}}.",
+				"MEETING_ID_MINIMAL_LENGTH": "Минимальная длина {{n}}.",
+				"MEETING_ID_REQUIRED": "Идентификатор собрания является обязательным."
+			}
+		},
+		"ADVANCED_OPTIONS": {
+			"TITLE": "Параметр собрания",
+			"MEETING_PIN": "PIN-код собрания:",
+			"MEETING_HOST": "Организатор собрания:",
+			"MODERATOR_PIN": "PIN-код модератора:",
+			"PLACE_PARTICIPANTS": "Перевести участников в \"режим ожидания\", пока к собранию не присоединится модератор",
+			"RECORD_MEETING": "Записать это собрание",
+			"TERMINATE_TIME": "Завершить в указанное время и предупредить заранее (мин.): ",
+			"TERMINATE_LEFT": "Завершить, когда все участники покинут собрание (мин.):",
+			"RESERVED_PORTS": "Зарезервированные порты",
+			"FULL": "Полное высокое разрешение (Full HD):",
+			"HIGH": "Высокое разрешение (HD):",
+			"STANDARD": "Стандартное разрешение:",
+			"AUDIO_ONLY_WITH_WC": "Аудио + Интернет:",
+			"ENDPOINTS_OPTIONS": "Параметры оконечного устройства",
+			"PARTICIPANTS": "Участники",
+			"AUTO_DIAL": "Автоматический набор",
+			"ON_MASTER": "На Master MCU",
+			"NONE": "Нет",
+			"OPTIONAL": "Необязательно",
+			"REQUIRED": "Обязательное поле",
+			"SELECT": "Выбрать",
+			"SELECT_FOR": "Выберите оконечное устройство для {{user}}",
+			"SELECTED_FOR": "{{endpoint}} выбран для пользователя {{user}}",
+			"SPECIAL_EVENT": "Конференция события",
+			"VIDEO_LAYOUT": "Макет видео",
+			"VIDEO_LAYOUT_OPTIONS": {
+				"PARTICIPANTS": "Участники",
+				"MEETING_LAYOUT": "Макет собрания",
+				"DYNAMIC": "Динамический",
+				"CLEAR_SELECTED": "Удалить выбранное"
+			},
+			"LINK_FOR_PARTICIPANTS": "Ссылка для участников",
+			"LINK_FOR_MODERATORS": "Ссылка для модераторов"
+		},
+		"SELECT_ENDPOINT": {
+			"SELECT_AN_ENDPOINT": "Выберите оконечное устройство",
+			"BY_DIRECTORY": "По каталогу",
+			"BY_ADDRESS": "По адресу",
+			"NAME": "Имя:",
+			"PROTOCOL": "Протокол",
+			"RESTRICTED_MODE": "Ограниченный режим",
+			"3G": "3G",
+			"ADDRESS": "Адрес:",
+			"BANDWIDTH": "Полоса пропускания:",
+			"SEARCH_ENDPOINT": "Поиск оконечных устройств",
+			"BANDWIDTH_DEFAULT": "По умолчанию",
+			"BANDWIDTH_AUDIO": "Аудио",
+			"BANDWIDTH_AUDIO_56": "Аудио 56",
+			"BANDWIDTH_VIDEO_56": "Аудио 56",
+			"NONE": "Нет",
+			"ERROR": {
+				"ENDPOINT_INVITED": "Это оконечное устройство уже приглашено."
+			},
+			"MOBILE": "Мобильный"
+		}
+	},
 	"GENERAL": {
 		"ERROR": {
 			"SESSION_HAS_EXPIRED": "Срок действия вашего сеанса истек. Войдите в систему, чтобы продолжить.",
