--- a/src/assets/i18n/zh-TW.json
+++ b/src/assets/i18n/zh-TW.json
@@ -255,6 +255,271 @@
 	"ON": "開",
 	"OFF": "關",
 	"DISABLED": "已停用",
+	"MEETING": {
+		"TAB_NAME_MEET_NOW": "立即開始會議",
+		"IN_PROGRESS": "進行中",
+		"JOIN": "加入",
+		"YOU": "您",
+		"AND": "和",
+		"OTHERS": "其他",
+		"TITLE": "安排一個會議",
+		"TITLE_UPDATE": "編輯會議",
+		"SUBJECT": "主旨：",
+		"SUBJECT_PLACEHOLDER": "輸入主旨",
+		"DEFAULT_MEETING_SUBJECT": "會議 {{number}}",
+		"POINT_TO_POINT_MEETING_SUBJECT": "新會議",
+		"TO": "至：",
+		"PARTICIPANTS_COUNT": " 位參與者／ ",
+		"TO_PANELIST": "給小組成員：",
+		"TO_PANELIST_WITH_NUMBER": "給小組成員 №{{number}}：",
+		"TO_PLACEHOLDER": "輸入名稱或電子郵件",
+		"TO_PARTICIPANTS": "給參與者：",
+		"PANELIST_NUMBER": "小組成員號碼：",
+		"START_TIME": "開始時間：",
+		"END_DATE": "結束日期",
+		"DURATION": "持續時間：",
+		"LOCATION": "位置：",
+		"MESSAGE": "訊息",
+		"MESSAGE_PLACEHOLDER": "輸入關於會議的詳細資料...",
+		"ENDPOINTS": "端點",
+		"SEARCH_ENDPOINTS": "搜尋端點",
+		"SELECT_ENDPOINTS": "選取端點",
+		"BROADCAST": {
+			"ADD_AN_IMAGE": "新增影像以協助檢視者辨認此廣播",
+			"BROADCAST": "廣播",
+			"BROADCAST_THIS_MEETING": "廣播此會議（即時串流）",
+			"EMAIL_INVITE": "電子郵件邀請",
+			"COPY_LINK": "複製連結",
+			"CANCEL": "取消",
+			"OPTIONAL": "選用",
+			"REQUIRED": "必填",
+			"DESCRIPTION": "輸入廣播描述",
+			"RECORDING_PROFILE": "錄製及廣播設定檔：",
+			"DEFAULT": "預設",
+			"SELECT_PROFILE": "選取設定檔",
+			"BROADCAST_PIN": "廣播 PIN：",
+			"SAME_AS_MEETING_PIN": "與會議 PIN 相同",
+			"BROADCAST_ACCESS": "可存取廣播的人員：",
+			"BROADCAST_ACCESS_LIST": {
+				"ALL_USERS": "所有使用者（公開）",
+				"ALL_AUTHENTICATED": "所有經過驗證的使用者",
+				"SPECIFIC_USERS": "特定使用者：",
+				"PRIVATE": "私人"
+			},
+			"SHOW_PUBLIC": "在公開事件清單中顯示廣播",
+			"AUTO_RECORD": "自動錄製廣播",
+			"ENABLE_Q_A": "啟用與檢視者進行問答",
+			"MODERATOR_PIN": "問答會議主持人 PIN：",
+			"Q_A_TOOLTIP": "輸入 PIN 碼以允許其他會議主持人進行問答",
+			"BROADCAST_UNAVAILABLE": "不支援廣播作為例行會議。"
+		},
+		"ADVANCED": "進階",
+		"BROWSER_AUDIO_VIDEO": "音訊／視訊 + 簡報",
+		"PRESENTATION_ONLY": "僅啟用簡報模式",
+		"CALL_ME": "撥號給我",
+		"VIDEO_THUMBNAIL": "視訊縮圖",
+		"OPEN_RECURRING_MEETING": "開啟",
+		"OCCURRENCE": "單一事件",
+		"SERIES": "例會",
+		"TIME": {
+			"MONTHS": "月",
+			"YEARS": "年",
+			"DAYS": "日",
+			"HOURS": "小時",
+			"MINUTES": "分鐘",
+			"SECONDS": "秒"
+		},
+		"DURATIONS": {
+			"15M": "15 分鐘",
+			"30M": "30 分鐘",
+			"1H": "1小時",
+			"2H": "2 小時",
+			"3H": "3 小時",
+			"6H": "6 小時"
+		},
+		"SEND": "傳送",
+		"SAVE": "儲存",
+		"INCORRECT_INPUT": "輸入有誤",
+		"TIME_IN_THE_PAST_WARN": "開始時間不能是過去的時間。",
+		"SYNCHRONIZED_FROM_OUTLOOK": "（已從 Microsoft Outlook 以唯讀形式同步）",
+		"DELETE": "刪除",
+		"DELETE_CONFIRM_TEXT": "是否確定要刪除？",
+		"CANCEL": "取消",
+		"CLOSE": "關閉",
+		"OK": "好",
+		"EMAIL": "電子郵件：",
+		"PHONE": "電話：",
+		"TERMINAL_CONFLICT": "一個或多個選取的端點目前為忙碌",
+		"PIN_REQUEST": {
+			"TITLE_PIN_ASSIGN": "請為此會議指定單次 PIN。僅允許使用數字。",
+			"ENTER_PIN": "輸入 PIN"
+		},
+		"ERROR": {
+			"NOT_VALID_TIME": "時間或格式錯誤。時間格式應為：「上午 X:XX」或「上午 XX:XX」",
+			"CAPTION": "發生錯誤",
+			"VALIDATION_CAPTION": "驗證欄位失敗",
+			"THESE_FIELDS_DIDNT_PASS_VALID": "以下欄位未通過驗證：",
+			"UNKNOWN_VALIDATION_ERROR": "未知驗證錯誤。請聯絡伺服器管理員。",
+			"VIRTUAL_CONFERENCE_ID_CONFLICTED": "虛擬會議 ID 衝突。請選擇另一個虛擬會議室，或將此會議安排在其他時間召開。",
+			"SERVICE_UNAVAILABLE": "沒有來自伺服器的回應，或伺服器錯誤。請稍後重試。",
+			"SERVICE_INTERNAL_ERROR": "伺服器遇到內部錯誤或組態不正確，無法完成您的要求。請聯絡伺服器管理員。",
+			"MISSING_REQUEST_PARAM": "缺少要求參數。請洽詢您的管理員。",
+			"VIRTUAL_ROOM_REQUIRED": "排程會議時，僅允許使用虛擬會議室",
+			"ERROR_INVALID_P2P_INFO": "點到點的會議還沒有被安排因為下列一個或多個需求沒有滿足：\n1. 此通話有 2 個端點。\n2. 兩個端點都不是 SIP 端點。",
+			"USER_ID_REQUEST_ERROR": "伺服器對使用者 ID 要求無回應。請稍候並重試，或聯絡伺服器管理員。",
+			"NON_SCOPIA_USER": "您無法新增非 Scopia 使用者",
+			"ACCESS_DENIED": "存取遭拒。",
+			"TOKEN_EXPIRED": "驗證權杖已過期。",
+			"TOKEN_INVALID": "驗證權杖無效。",
+			"ERROR": "遇到非預期錯誤。請聯絡伺服器管理員。",
+			"MCU_RESOURCE_SHORTAGE": "無法排程會議（已達到 Avaya Meetings 多媒體伺服器容量上限）。\n請檢查您的會議設定，然後重試。",
+			"ERC_WAITING_ROOM_REQUIRED_IN_TE": "等候室需要 TE 環境，請檢查您的會議室設定。",
+			"ERROR_DAYOFWEEKS_REQUIRED": "您必須指定要例行舉辦的日期"
+		},
+		"RECURRING": {
+			"TITLE": "例會",
+			"RECURRING": "例會：",
+			"REPEATS": "重複週期",
+			"DAILY": "每天",
+			"WEEKLY": "每週",
+			"MONTHLY": "每月",
+			"YEARLY": "每年",
+			"EVERY": "每",
+			"EVERY_FEMALE": "每",
+			"DAYS": "天",
+			"WEEKS": "週",
+			"MONTHS": "個月",
+			"YEARS": "年",
+			"ON": "於",
+			"QUICK_OPTIONS": {
+				"ONCE": "僅一次",
+				"DAY_NUMBER_OF_MONTH": "每月的第 {{dayOfMonth}} 天",
+				"EVERY_DAY": "每天",
+				"EVERY_SUNDAY": "每週日",
+				"EVERY_MONDAY": "每週一",
+				"EVERY_TUESDAY": "每週二",
+				"EVERY_WEDNESDAY": "每週三",
+				"EVERY_THURSDAY": "每週四",
+				"EVERY_FRIDAY": "每週五",
+				"EVERY_SATURDAY": "每週六"
+			},
+			"CUSTOM": "自訂",
+			"DESCRIPTION_LINES": {
+				"DAILY": "從 {{meetingDateString}} 的{{meetingTimeString}}到{{meetingEndTimeString}}，每 {{numberOfRepeats}} 天召開會議。",
+				"DAILY_WITH_ENDDATE": "從 {{meetingDateString}} 至 {{meetingEndDateString}} 的{{meetingTimeString}}到{{meetingEndTimeString}}，每 {{numberOfRepeats}} 天召開會議。",
+				"WEEKLY": "從 {{meetingDateString}} 的{{meetingTimeString}}到{{meetingEndTimeString}}，每 {{numberOfRepeats}} 週的{{weeklyDaysString}}召開會議。",
+				"WEEKLY_WITH_ENDDATE": "從 {{meetingDateString}} 至 {{meetingEndDateString}} 的{{meetingTimeString}}到{{meetingEndTimeString}}，每 {{numberOfRepeats}} 週的{{weeklyDaysString}}召開會議。",
+				"MONTHLY": "從 {{meetingDateString}} 的{{meetingTimeString}}到{{meetingEndTimeString}}，每 {{numberOfRepeats}} 個月的第 {{selectedMonthDay}} 天召開會議。",
+				"MONTHLY_WITH_ENDDATE": "從 {{meetingDateString}} 至 {{meetingEndDateString}} 的{{meetingTimeString}}到{{meetingEndTimeString}}，每 {{numberOfRepeats}} 個月的第 {{selectedMonthDay}} 天召開會議。",
+				"YEARLY_ENDDATE": "從 {{meetingDateString}} 的 {{meetingTimeString}} 到 {{meetingEndTimeString}} 有效。",
+				"OCCURS": "週期",
+				"OF_EVERY_YEAR": "/每年",
+				"YEARLY_ON_EVERY": "",
+				"JANUARY": "一月",
+				"FEBRUARY": "二月",
+				"MARCH": "三月",
+				"APRIL": "四月",
+				"MAY": "五月",
+				"JUNE": "六月",
+				"JULY": "七月",
+				"AUGUST": "八月",
+				"SEPTEMBER": "九月",
+				"OCTOBER": "十月",
+				"NOVEMBER": "十一月",
+				"DECEMBER": "十二月",
+				"MONDAY": "星期一",
+				"TUESDAY": "星期二",
+				"WEDNESDAY": "星期三",
+				"THURSDAY": "星期四",
+				"FRIDAY": "星期五",
+				"SATURDAY": "星期六",
+				"SUNDAY": "星期日",
+				"WEEKDAY": "工作日",
+				"WEEKENDDAY": "周末",
+				"ANYDAY": "天",
+				"FIRST": "第一",
+				"SECOND": "秒",
+				"THIRD": "第三",
+				"FOURTH": "第四",
+				"LAST": "最後一個",
+				"OF": "/"
+			}
+		},
+		"SELECT_LOCATION": {
+			"TITLE": "位置",
+			"VIRTUAL_ROOM": "虛擬會議室",
+			"NEW_MEETING": "新會議",
+			"MEETING_ID": "會議 ID：",
+			"MEETING_TYPE": "會議類型：",
+			"SEARCH": "搜尋",
+			"SEARCH_ROOM": "搜尋會議室",
+			"FOUND_ROOMS": "已找到會議室",
+			"YOUR_ROOMS": "您的會議室",
+			"DELEGATED_ROOMS": "已指定會議室",
+			"SELECT_VIRTUAL_ROOM": "請為會議選擇虛擬會議室",
+			"ERROR": {
+				"MEETING_ID_MUST_START": "只能包含數字，且必須以 {{number}} 開頭。",
+				"MEETING_ID_MINIMAL_LENGTH": "長度下限為 {{n}}",
+				"MEETING_ID_REQUIRED": "必須填寫會議 ID"
+			}
+		},
+		"ADVANCED_OPTIONS": {
+			"TITLE": "會議選項",
+			"MEETING_PIN": "會議 PIN：",
+			"MEETING_HOST": "會議主辦者：",
+			"MODERATOR_PIN": "會議主持人 PIN：",
+			"PLACE_PARTICIPANTS": "將參與者置於「等候室」直到會議主持人加入會議",
+			"RECORD_MEETING": "錄製此會議",
+			"TERMINATE_TIME": "在預定時間終止並提前提醒（分鐘）：",
+			"TERMINATE_LEFT": "在所有參與者離開後終止會議（分鐘）：",
+			"RESERVED_PORTS": "預留連接埠",
+			"FULL": "全高畫質：",
+			"HIGH": "高畫質：",
+			"STANDARD": "標準畫質：",
+			"AUDIO_ONLY_WITH_WC": "音訊 + Web 協同作業：",
+			"ENDPOINTS_OPTIONS": "端點選項",
+			"PARTICIPANTS": "參與者",
+			"AUTO_DIAL": "自動撥號",
+			"ON_MASTER": "在主 MCU 上",
+			"NONE": "無",
+			"OPTIONAL": "選用",
+			"REQUIRED": "必填",
+			"SELECT": "選取",
+			"SELECT_FOR": "為 {{user}} 選取端點",
+			"SELECTED_FOR": "已為 {{user}} 選取 {{endpoint}}",
+			"SPECIAL_EVENT": "事件會議",
+			"VIDEO_LAYOUT": "視訊配置",
+			"VIDEO_LAYOUT_OPTIONS": {
+				"PARTICIPANTS": "參與者",
+				"MEETING_LAYOUT": "會議配置",
+				"DYNAMIC": "動態",
+				"CLEAR_SELECTED": "清除選取項目"
+			},
+			"LINK_FOR_PARTICIPANTS": "參與者連結",
+			"LINK_FOR_MODERATORS": "會議主持人連結"
+		},
+		"SELECT_ENDPOINT": {
+			"SELECT_AN_ENDPOINT": "選取端點",
+			"BY_DIRECTORY": "依目錄",
+			"BY_ADDRESS": "依位址",
+			"NAME": "名稱：",
+			"PROTOCOL": "通訊協定：",
+			"RESTRICTED_MODE": "限制模式",
+			"3G": "3G",
+			"ADDRESS": "位址：",
+			"BANDWIDTH": "頻寬：",
+			"SEARCH_ENDPOINT": "搜尋端點",
+			"BANDWIDTH_DEFAULT": "預設",
+			"BANDWIDTH_AUDIO": "音訊",
+			"BANDWIDTH_AUDIO_56": "56 音訊",
+			"BANDWIDTH_VIDEO_56": "56 音訊",
+			"NONE": "無",
+			"ERROR": {
+				"ENDPOINT_INVITED": "已邀請此端點"
+			},
+			"MOBILE": "手機"
+		}
+	},
 	"GENERAL": {
 		"ERROR": {
 			"SESSION_HAS_EXPIRED": "您的工作階段已過期。請登入以繼續",
